# direkto-api

./: .env  .env_example  DockerFile  Dockerfile  README.md  pyproject.toml
.github/workflows/: gcp-build-and-deploy.yml
app/: main.py
app/.github/workflows/: gcp-build-deploy.yml 
app/api/auth/: authentication.py
app/api/database/: database.py
app/api/dependencies/: dependencies.py  tmdb.py
app/api/models/: models.py
app/api/routes/: moviescreator.py  users.py
app/api/schemas/: schemas.py
app/core/: config.py
pulumi/: Pulumi.dev.yaml  Pulumi.yaml
